capital letter change

--- a/fiori-app-inTake/inTake/webapp/i18n/i18n.properties
+++ b/fiori-app-inTake/inTake/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
 
-appTitle = InTake
-appDescription =  InTake
+appTitle = Intake
+appDescription =  Intake
 
 Navigateto=Navigate to:
 Strain = Strain
