--- a/fiori-app-inTake/inTake/webapp/i18n/i18n.properties
+++ b/fiori-app-inTake/inTake/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
 
-appTitle = Intake
-appDescription =  Intake
+appTitle = Manage Inventory
+appDescription =  Manage Inventory
 
 Navigateto=Navigate to:
 Strain = Strain
